--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="headerDiv">
-        <p id="headerP">Ankur Biswas</p>
+        <p id="headerP">Ankur Saha</p>
     </div><br>
     <div id="container">
         <div id="leftSideBar">
