--- a/portfolio.html
+++ b/portfolio.html
@@ -9,84 +9,63 @@
 <body>
     <div id="headerDiv">
         <p id="headerP">Ankur Biswas</p>
-    </div><br>
+    </div>
     <div id="container">
         <div id="leftSideBar">
-            <p id="sidebarP" style="color: white;">Address : Uttarghoshpara , Chakdaha Nadia W.B -741222</p>
-            <p id="sidebarP1" style="color: white;">Contact: <i>+919339161788</i></p>
-            <p id="sidebarP1" style="color: white;"> Email: biswasayan402@gmail.com</p>
-            <p id="sidebarP1" style="color: white;"> Linkedin:<a href="https://www.linkedin.com/in/ankur-biswas-40082631a" target="_blank">https://www.linkedin.com/in/ankur-biswas-40082631a/</a> </p>
-            <p id="sidebarP1" style="color: white;">Github:<a href="https://github.com/aNKur562" target="_blank"> https://github.com/aNKur562</a></p>
-            <p id="sidebarP1" style="color: white;">LeetCode:<a href="https://leetcode.com/u/ankurBiswas" target="_blank"> https://leetcode.com/u/ankurBiswas/</a></p>
-            <p id="sidebarP1" style="color: white;">Hackerrank:<a href="https://www.hackerrank.com/profile/biswasayan402" target="_blank"> https://www.hackerrank.com/profile/biswasayan402</a></p>
-            <p id="sidebarP1" style="color: white;"> Skills: Python , OOPs , Dbms , HTML , CSS </p>
-            <p id="sidebarP1" style="color: white;">Languages: English , Bengali , Hindi</p>
+            <p id="sidebarP">Address: Uttarghoshpara, Chakdaha Nadia W.B -741222</p>
+            <p id="sidebarP1">Contact: <i>+919339161788</i></p>
+            <p id="sidebarP1">Email: biswasayan402@gmail.com</p>
+            <p id="sidebarP1">LinkedIn: <a href="https://www.linkedin.com/in/ankur-biswas-40082631a" target="_blank">Profile</a></p>
+            <p id="sidebarP1">GitHub: <a href="https://github.com/aNKur562" target="_blank">Profile</a></p>
+            <p id="sidebarP1">LeetCode: <a href="https://leetcode.com/u/ankurBiswas" target="_blank">Profile</a></p>
+            <p id="sidebarP1">Hackerrank: <a href="https://www.hackerrank.com/profile/biswasayan402" target="_blank">Profile</a></p>
+            <p id="sidebarP1">Skills: Python, OOPs, DBMS, HTML, CSS</p>
+            <p id="sidebarP1">Languages: English, Bengali, Hindi</p>
         </div>
-
         <div id="profile">
-            <p id="profile1">P R O F I L E</p>
-            <p id="profileDes">First-year Electronics and Telecommunication Engineering student with a solid foundation
-                in basic circuit design, digital systems, and communication principles. Eager to apply technical
-                knowledge and problem-solving skills to real-world applications. Strong analytical abilities, with a
-                commitment to continuous learning and innovation in the field. </p>
-            <p ID="profileid2">E D U C A T I O N</p>
+            <p id="profile1">PROFILE</p>
+            <p id="profileDes">First-year Electronics and Telecommunication Engineering student with a solid foundation in basic circuit design, digital systems, and communication principles. Eager to apply technical knowledge and problem-solving skills to real-world applications. Strong analytical abilities, with a commitment to continuous learning and innovation in the field.</p>
+            <p id="profileid2">EDUCATION</p>
             <center>
-                <table style="width: 97%;">
-                    <tr style="height: 50px;">
+                <table>
+                    <tr>
                         <th>NAME</th>
-
                         <th>MARKS/CGPA</th>
                         <th>School/College</th>
                         <th>Year</th>
-                    <tr style="height: 40px;">
-                        <td>Secondery Education(WBBSE)</td>
-
-                        <td>
-                            <center>84.4%</center>
-                        </td>
+                    </tr>
+                    <tr>
+                        <td>Secondary Education (WBBSE)</td>
+                        <td>84.4%</td>
                         <td>Chakdaha Ramlal Academy</td>
                         <td>2018-2019</td>
                     </tr>
-                    <tr style="height: 40px;">
-                        <td>Higher Secondery Education(WBBSE)</td>
-
-                        <td>
-                            <center>82.2%</center>
-                        </td>
+                    <tr>
+                        <td>Higher Secondary Education (WBBSE)</td>
+                        <td>82.2%</td>
                         <td>Chakdaha Ramlal Academy</td>
                         <td>2020-2021</td>
                     </tr>
-                    <tr style="height: 40px;">
-                        <td>Bachelor of Technology(ECE)</td>
+                    <tr>
+                        <td>Bachelor of Technology (ECE)</td>
                         <td>Nil</td>
-                        <td>University of Engeenering and Management(UEM)</td>
+                        <td>University of Engineering and Management (UEM)</td>
                         <td>2024-2028</td>
                     </tr>
                 </table>
             </center>
-
-            <p id="project3"> P R O J E C T</p>
+            <p id="project3">PROJECTS</p>
             <ul>
-                <li> The Interactive CV Portfolio is a personal website designed to present my CV in a unique and
-                    dynamic format. Built using HTML, CSS, and JavaScript, it will allow users to view my CV details
-                    with an engaging and user-friendly interface. This project will demonstrate my skills in web design,
-                    animation, and interactivity, serving as both a digital CV and an example of my development
-                    expertise.</li><br>
-                <li>Creating a project that inserts user details into a MySQL database using Python is a great way to
-                    demonstrate my knowledge of backend programming and database handling. Below is a detailed outline
-                    of how you could structure this project.
-
-                </li>
+                <li>The Interactive CV Portfolio is a personal website designed to present my CV in a unique and dynamic format. Built using HTML, CSS, and JavaScript, it will allow users to view my CV details with an engaging and user-friendly interface.</li>
+                <li>Creating a project that inserts user details into a MySQL database using Python demonstrates my backend programming and database handling knowledge.</li>
             </ul>
-            <p id="acheivement"> A C H I E V E M E N T </p>
+            <p id="acheivement">ACHIEVEMENTS</p>
             <ul>
-                <li> 9th place in a Interschool Olympiad</li><br>
-                <li>5th completion in Drawing </li>
-            </ul><br><br>
-            
+                <li>9th place in an Interschool Olympiad</li>
+                <li>5th position in Drawing Competition</li>
+            </ul>
             <p id="declaration">I hereby declare that the information provided above is true and correct to the best of my knowledge and belief.</p>
-
         </div>
+    </div>
 </body>
-
 </html>
