--- a/portfolio.html
+++ b/portfolio.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
 </head>
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <div id="headerDiv">
         <p id="headerP">Ankur Biswas</p>
     </div>
@@ -22,7 +24,9 @@
             <p id="sidebarP1">Skills: Python, OOPs, DBMS, HTML, CSS</p>
             <p id="sidebarP1">Languages: English, Bengali, Hindi</p>
         </div>
+      
         <div id="profile">
+            <button type="button" id="print" class="btn btn-outline-primary" onclick="window.print()">Print</button>
             <p id="profile1">PROFILE</p>
             <p id="profileDes">First-year Electronics and Telecommunication Engineering student with a solid foundation in basic circuit design, digital systems, and communication principles. Eager to apply technical knowledge and problem-solving skills to real-world applications. Strong analytical abilities, with a commitment to continuous learning and innovation in the field.</p>
             <p id="profileid2">EDUCATION</p>
